[tool.poetry]
name = "videodrill"
version = "0.1.0"
description = "terminal app to pull clips from video"
authors = ["Andy Sit <andysit173@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "24.2.0"
cachetools = "5.5.0"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
executing = "2.0.1"
ffmpeg-python = "0.2.0"
fonttools = "4.53.0"
frozenlist = "1.4.1"
future = "1.0.0"
google-api-core = "2.19.1"
google-api-python-client = "2.142.0"
google-auth = "2.34.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
googleapis-common-protos = "1.63.2"
httplib2 = "0.22.0"
icecream = "2.1.3"
idna = "3.7"
imageio = "2.34.1"
importlib-resources = "6.4.0"
joblib = "1.4.2"
kiwisolver = "1.4.5"
lazy-loader = "0.4"
linkify-it-py = "2.0.3"
markdown-it-py = "3.0.0"
matplotlib = "3.9.0"
mdit-py-plugins = "0.4.1"
mdurl = "0.1.2"
msgpack = "1.0.8"
multidict = "6.0.5"
networkx = "3.2.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
opencv-python = "4.10.0.82"
packaging = "24.0"
pandas = "2.2.2"
pillow = "10.3.0"
proto-plus = "1.24.0"
protobuf = "5.27.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rich = "13.7.1"
rsa = "4.9"
scikit-image = "0.22.0"
scikit-learn = "1.5.0"
scipy = "1.13.1"
six = "1.16.0"
srt = "3.5.3"
textual = "0.76.0"
textual-dev = "1.5.1"
threadpoolctl = "3.5.0"
tifffile = "2024.5.22"
tqdm = "4.66.4"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uc-micro-py = "1.0.3"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
vosk = "0.3.45"
websockets = "12.0"
yarl = "1.9.4"
zipp = "3.19.2"

[tool.poetry.scripts]
vd = "videodrill.tui.cli:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
